<resources>
    <string name="app_name">Calculator</string>
    <string name="button_c">C</string>
    <string name="button_percent">%</string>
    <string name="button_divide">&#0247;</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_multi">x</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_minus">-</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_plus">+</string>
    <string name="button_0">0</string>
    <string name="button_dot">.</string>
    <string name="button_result">=</string>
    <string name="backspace_description">Delete last input</string>

    <string name="can_not_calc_percent">Can not calc percent for this value</string>
    <string name="do_nothing">This button does nothing now :(</string>

    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="save">Save</string>
    <string name="can_not_make_operation">Can not make operation</string>
</resources>