<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_work_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/screen_divider"
        style="@style/TextViewStyle"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/screen_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_c"
        android:text="@string/button_c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_divider"
        app:layout_constraintEnd_toStartOf="@id/btn_backspace"
        app:layout_constraintBottom_toTopOf="@id/btn_7"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        style="@style/ButtonStyle.OperationButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_backspace"
        app:icon="@drawable/ic_outline_backspace"
        android:contentDescription="@string/backspace_description"
        app:layout_constraintStart_toEndOf="@id/btn_c"
        app:layout_constraintTop_toBottomOf="@id/screen_divider"
        app:layout_constraintEnd_toStartOf="@id/btn_percent"
        app:layout_constraintBottom_toTopOf="@id/btn_8"
        style="@style/ButtonStyle.ButtonWithImageStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_percent"
        android:text="@string/button_percent"
        app:layout_constraintStart_toEndOf="@id/btn_backspace"
        app:layout_constraintTop_toBottomOf="@id/screen_divider"
        app:layout_constraintEnd_toStartOf="@id/btn_divide"
        app:layout_constraintBottom_toTopOf="@id/btn_9"
        app:layout_constraintVertical_chainStyle="spread"
        style="@style/ButtonStyle.OperationButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_divide"
        style="@style/ButtonStyle.OperationButtonStyle"
        android:text="@string/button_divide"
        app:layout_constraintBottom_toTopOf="@id/btn_multi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_percent"
        app:layout_constraintTop_toBottomOf="@id/screen_divider"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_7"
        android:text="@string/button_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_c"
        app:layout_constraintEnd_toStartOf="@id/btn_8"
        app:layout_constraintBottom_toTopOf="@id/btn_4"
        app:layout_constraintHorizontal_chainStyle="spread"
        style="@style/ButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_8"
        android:text="@string/button_8"
        app:layout_constraintStart_toEndOf="@id/btn_7"
        app:layout_constraintEnd_toStartOf="@id/btn_9"
        app:layout_constraintTop_toTopOf="@id/btn_7"
        app:layout_constraintBottom_toBottomOf="@id/btn_7"
        app:layout_constraintVertical_chainStyle="spread"
        style="@style/ButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_9"
        android:text="@string/button_9"
        app:layout_constraintStart_toEndOf="@id/btn_8"
        app:layout_constraintTop_toBottomOf="@id/btn_percent"
        app:layout_constraintEnd_toStartOf="@id/btn_multi"
        app:layout_constraintBottom_toTopOf="@id/btn_6"
        style="@style/ButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_multi"
        android:text="@string/button_multi"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@id/btn_9"
        app:layout_constraintTop_toBottomOf="@id/btn_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_minus"
        style="@style/ButtonStyle.OperationButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_4"
        android:text="@string/button_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_7"
        app:layout_constraintEnd_toStartOf="@id/btn_5"
        app:layout_constraintBottom_toTopOf="@id/btn_1"
        app:layout_constraintHorizontal_chainStyle="spread"
        style="@style/ButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_5"
        android:text="@string/button_5"
        app:layout_constraintStart_toEndOf="@id/btn_4"
        app:layout_constraintTop_toBottomOf="@id/btn_8"
        app:layout_constraintEnd_toStartOf="@id/btn_6"
        app:layout_constraintBottom_toTopOf="@id/btn_2"
        style="@style/ButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_6"
        android:text="@string/button_6"
        app:layout_constraintStart_toEndOf="@id/btn_5"
        app:layout_constraintTop_toBottomOf="@id/btn_9"
        app:layout_constraintEnd_toStartOf="@id/btn_minus"
        app:layout_constraintBottom_toTopOf="@id/btn_3"
        style="@style/ButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_minus"
        android:text="@string/button_minus"
        app:layout_constraintStart_toEndOf="@id/btn_6"
        app:layout_constraintTop_toBottomOf="@id/btn_multi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_plus"
        style="@style/ButtonStyle.OperationButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_1"
        android:text="@string/button_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_4"
        app:layout_constraintEnd_toStartOf="@id/btn_2"
        app:layout_constraintBottom_toTopOf="@id/btn_sqrt"
        app:layout_constraintHorizontal_chainStyle="spread"
        style="@style/ButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_2"
        android:text="@string/button_2"
        app:layout_constraintStart_toEndOf="@id/btn_1"
        app:layout_constraintTop_toBottomOf="@id/btn_5"
        app:layout_constraintEnd_toStartOf="@id/btn_3"
        app:layout_constraintBottom_toTopOf="@id/btn_0"
        style="@style/ButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_3"
        android:text="@string/button_3"
        app:layout_constraintStart_toEndOf="@id/btn_2"
        app:layout_constraintTop_toBottomOf="@id/btn_6"
        app:layout_constraintEnd_toStartOf="@id/btn_plus"
        app:layout_constraintBottom_toTopOf="@id/btn_dot"
        style="@style/ButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_plus"
        android:text="@string/button_plus"
        app:layout_constraintStart_toEndOf="@id/btn_3"
        app:layout_constraintTop_toBottomOf="@id/btn_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_result"
        style="@style/ButtonStyle.OperationButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sqrt"
        android:text="@string/sqrt"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_1"
        style="@style/ButtonStyle.OperationButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_0"
        android:text="@string/button_0"
        app:layout_constraintStart_toEndOf="@id/btn_sqrt"
        app:layout_constraintTop_toBottomOf="@id/btn_2"
        app:layout_constraintEnd_toStartOf="@id/btn_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/ButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dot"
        android:text="@string/button_dot"
        app:layout_constraintStart_toEndOf="@id/btn_0"
        app:layout_constraintTop_toBottomOf="@id/btn_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_result"
        style="@style/ButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_result"
        android:text="@string/button_result"
        app:layout_constraintStart_toEndOf="@id/btn_dot"
        app:layout_constraintTop_toBottomOf="@id/btn_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/ButtonStyle.OperationButtonStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>